--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     def roomVersion = "2.5.0"
 
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -46,6 +51,12 @@ dependencies {
     implementation("androidx.room:room-ktx:$roomVersion")
     implementation("com.google.dagger:hilt-android:2.42")
     implementation("androidx.paging:paging-runtime-ktx:3.1.1")
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.okhttp3:okhttp-bom:4.9.3")
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
 
     //annotation compiler
     kapt("androidx.room:room-compiler:$roomVersion")
