--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 plugins {
     id 'com.android.application'
+    id 'dagger.hilt.android.plugin'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
 }
 
 android {
     namespace 'com.flow.moviesearchflowhomework'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.flow.moviesearchflowhomework"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -33,14 +33,14 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        dataBinding true
-        viewBinding true
+        viewBinding = true
+        dataBinding = true
     }
 }
 
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    def roomVersion = "2.5.0"
+    def roomVersion = "2.4.2"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
@@ -51,6 +51,7 @@ dependencies {
     implementation("androidx.room:room-ktx:$roomVersion")
     implementation("com.google.dagger:hilt-android:2.42")
     implementation("androidx.paging:paging-runtime-ktx:3.1.1")
+    implementation("io.coil-kt:coil:1.4.0")
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation("com.squareup.retrofit2:converter-gson:2.9.0")
     implementation("com.squareup.okhttp3:okhttp-bom:4.9.3")
