--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'kotlin-kapt'
 }
 
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     namespace 'com.flow.moviesearchflowhomework'
     compileSdk 33
@@ -15,8 +19,10 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_URL", properties["BASE_URL"]
+        buildConfigField "String", "SECRET_KEY", properties["SECRET_KEY"]
+        buildConfigField "String", "CLIENT_ID", properties["CLIENT_ID"]
     }
 
     buildTypes {
@@ -47,6 +53,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+    implementation("androidx.activity:activity-ktx:1.6.1")
     implementation("androidx.room:room-runtime:$roomVersion")
     implementation("androidx.room:room-ktx:$roomVersion")
     implementation("com.google.dagger:hilt-android:2.42")
